@@ -1190,6 +1190,8 @@ layer.
 
 <pre class=prod><dfn>&lt;mask-layer&gt;</dfn> = <var>&lt;mask-image&gt;</var> || &lt;position&gt; [ / &lt;mask-size&gt; ]? || &lt;repeat-style&gt; || &lt;box&gt;{1,2}</pre>
 
+<p class="issue">Currently Mozilla needs to differ between CSS Image and Mask resource right after parsing and before loading the resource. This is not possible with the current 'mask' property definition.</p>
+
 <pre class=prod><dfn>&lt;mask-source&gt;</dfn> = [ <var>&lt;url&gt;</var> | <var>child</var> | <var>&lt;child-selector&gt;</var> ] [ alpha | luminance ] ? </pre>
 
 <pre class=prod><dfn>&lt;child-selector&gt;</dfn> = select(&lt;compound-selector&gt;#)</pre>
@@ -2424,6 +2426,14 @@ References</h2>
 <h3 class="no-num" id="normative-references">
 Normative references</h3>
 <!--normative-->
+<dl>
+  <dt id="ref-svg2"><strong class="normref">[SVG2]</strong></dt>
+    <dd>
+      Cameron McCormack; <a href="http://www.w3.org/TR/2012/WD-SVG2-20120828/"><cite>Scalable
+      Vector Graphics (SVG) 2</cite>.</a> 28 August 2012. W3C Working Draft. (Work in progress.) URL:
+      <a href="http://www.w3.org/TR/2012/WD-SVG2-20120828/">http://www.w3.org/TR/2012/WD-SVG2-20120828/</a>
+    </dd>
+</dl>
 
 <h3 class="no-num" id="other-references">
 Other references</h3>
