@@ -59,13 +59,11 @@
   <!-- === defined in other specifications ================================ -->
 
   <term name='basic shapes' href='http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermBasicShapeElement'/>
-  <term name='bounding box' href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermBoundingBox'/>
+  <term name='bounding box' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/intro.html#TermBoundingBox'/>
   <term name='compound selector' href='http://dev.w3.org/csswg/selectors4/#compound'/>
-  <term name='decorated bounding box' href='http://www.w3.org/TR/SVGTiny12/intro.html#TermDecoratedBoundingBox'/>
-  <term name='lacuna value'href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermLacunaValue'/>
-  <term name='unsupported' href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermUnsupportedValue'/>
-  <term name='unsupported value' href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermUnsupportedValue'/>
+  <term name='decorated bounding box' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/intro.html#TermDecoratedBoundingBox'/>
+  <term name='lacuna value' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/intro.html#TermLacunaValue'/>
   <term name='tree order' href='http://www.w3.org/TR/2012/WD-dom-20120405/#concept-tree-order'/>
 
-  <interface name='SVGDefinitionElement' href='https://svgwg.org/svg2-draft/types.html#InterfaceSVGDefinitionElement'/>
+  <interface name='SVGDefinitionElement' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGDefinitionElement'/>
 </definitions>
