@@ -11,11 +11,11 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2012-10-22 name=dcterms.issued>
+  <meta content=2012-10-26 name=dcterms.issued>
   <meta content="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html"
    name=dcterms.creator>
   <meta content=W3C name=dcterms.publisher>
-  <meta content="http://www.w3.org/TR/2012/ED-css-masking-20121022/"
+  <meta content="http://www.w3.org/TR/2012/ED-css-masking-20121026/"
    name=dcterms.identifier>
   <link href="#contents" rel=contents>
   <link href="#index" rel=index>
@@ -43,7 +43,7 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 22 October
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 26 October
     2012</h2>
 
    <dl>
@@ -51,7 +51,7 @@
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20121022/-->
+     <!--http://www.w3.org/TR/2012/WD-css-masking-20121026/-->
 
     <dt>Latest version:
 
@@ -1641,6 +1641,11 @@ div {
 
   <pre class=prod><dfn id=ltmask-layergt>&lt;mask-layer&gt;</dfn> = <a
    href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a> || &lt;position&gt; [ / &lt;mask-size&gt; ]? || &lt;repeat-style&gt; || &lt;box&gt;{1,2}</pre>
+
+  <p class=issue>Currently Mozilla needs to differ between CSS Image and Mask
+   resource right after parsing and before loading the resource. This is not
+   possible with the current ‘<a href="#mask"><code
+   class=property>mask</code></a>’ property definition.
 
   <pre class=prod><dfn id=ltmask-sourcegt>&lt;mask-source&gt;</dfn> = [ <a
    href="#lturlgt"><var>&lt;url&gt;</var></a> | <a
@@ -3813,7 +3818,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    element.
 
   <pre class=idl>interface <b>SVGClipPathElement</b> : <a
-   href="https://svgwg.org/svg2-draft/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
+   href="http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
   readonly attribute <a
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
    href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
@@ -3852,7 +3857,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    class=property>mask</code>’</a> element.
 
   <pre class=idl>interface <b>SVGMaskElement</b> : <a
-   href="https://svgwg.org/svg2-draft/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
+   href="http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
 
   // Mask Types
   const unsigned short <a
@@ -4052,6 +4057,16 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <!---->
   </dl>
   <!--end-normative-->
+
+  <dl>
+   <dt id=ref-svg2><strong class=normref>[SVG2]</strong>
+
+   <dd> Cameron McCormack; <a
+    href="http://www.w3.org/TR/2012/WD-SVG2-20120828/"><cite>Scalable Vector
+    Graphics (SVG) 2</cite>.</a> 28 August 2012. W3C Working Draft. (Work in
+    progress.) URL: <a
+    href="http://www.w3.org/TR/2012/WD-SVG2-20120828/">http://www.w3.org/TR/2012/WD-SVG2-20120828/</a>
+  </dl>
 
   <h3 class=no-num id=other-references> Other references</h3>
   <!--begin-informative-->
