@@ -1,3 +1,7 @@
+2012-10-26 dschulze@adobe.com
+	Add issue to 'mask' property after feedback from Mozilla.
+	Link clean up.
+
 2012-10-22 bbirtles@mozilla.com
 	Remove absolute links to interfaces and take them from the definitions file
 	instead.
